fix(ffe-form): replace hardcoded spacing with variables
BREAKING CHANGE: This commit is likely to cause small visual regressions caused by slightly altered margin and padding values.

--- a/packages/ffe-form/less/form-label.less
+++ b/packages/ffe-form/less/form-label.less
@@ -9,7 +9,7 @@
 
 .ffe-form-label {
     margin: 0;
-    padding: 8px 0 2px;
+    padding: @ffe-spacing-xs 0 @ffe-spacing-2xs;
     display: inline-block;
     position: relative;
     font-family: MuseoSans-500, arial, sans-serif;
