--- a/packages/ffe-form/less/input-field.less
+++ b/packages/ffe-form/less/input-field.less
@@ -15,7 +15,7 @@
 .ffe-input-field {
     display: block;
     height: 45px;
-    padding: 0 13px;
+    padding: 0 @ffe-spacing-sm;
     font-family: MuseoSans-500, arial, sans-serif;
     color: @ffe-black;
     border-radius: 4px;
