--- a/packages/ffe-form/less/input-group.less
+++ b/packages/ffe-form/less/input-group.less
@@ -38,7 +38,7 @@
     }
 
     > *:nth-last-child(1) {
-        margin-bottom: 30px;
+        margin-bottom: @ffe-spacing-lg;
     }
 
     &--error {
@@ -47,7 +47,7 @@
         }
 
         > *:nth-last-child(2) {
-            margin-bottom: 30px;
+            margin-bottom: @ffe-spacing-lg;
         }
     }
 
@@ -66,7 +66,7 @@
         }
 
         .ffe-field-error-message {
-            margin: 5px 0 10px;
+            margin: @ffe-spacing-2xs 0 @ffe-spacing-xs;
         }
     }
 }
