--- a/packages/ffe-form/less/phone-number.less
+++ b/packages/ffe-form/less/phone-number.less
@@ -32,7 +32,7 @@
 
         label {
             white-space: nowrap;
-            margin-right: 10px;
+            margin-right: @ffe-spacing-xs;
         }
     }
 
@@ -40,13 +40,13 @@
         max-width: 60px;
         border-top-left-radius: 0;
         border-bottom-left-radius: 0;
-        margin-right: 14px;
+        margin-right: @ffe-spacing-sm;
     }
 
     &__plus {
         font-weight: 400;
         line-height: 1;
-        padding: 12px 6px;
+        padding: 12px @ffe-spacing-xs;
         border: 2px solid @ffe-grey-silver;
         border-radius: 4px 0 0 4px;
         border-right: 0;
