--- a/packages/ffe-form/less/textarea.less
+++ b/packages/ffe-form/less/textarea.less
@@ -11,7 +11,7 @@
 .ffe-textarea {
     display: block;
     width: 100%;
-    padding: 13px;
+    padding: @ffe-spacing-sm;
     font-family: MuseoSans-500, arial, sans-serif;
     border-radius: 4px;
     border: 2px solid @ffe-grey-silver;
