--- a/packages/ffe-form/less/tooltip.less
+++ b/packages/ffe-form/less/tooltip.less
@@ -24,7 +24,7 @@
         display: inline-block;
         height: @ffe-tooltip-size;
         line-height: 24px;
-        margin: 0 0 4px 13px;
+        margin: 0 0 @ffe-spacing-2xs @ffe-spacing-sm;
         padding: 0 0 0 1px;
         text-align: center;
         vertical-align: middle;
@@ -78,7 +78,7 @@
     }
 
     &--open &__text {
-        padding-bottom: 12px;
+        padding-bottom: @ffe-spacing-sm;
         height: auto;
         overflow: visible;
         visibility: visible;
